--- a/Monitor/templates/Monitor.html
+++ b/Monitor/templates/Monitor.html
@@ -25,7 +25,7 @@
         <th>Epoch</th>
         <th>Acc</th>
         <th>Val Acc</th>
-        <th>button</th>
+        <th>Graph</th>
     </tr>
     {% for net in data|sort %}
     <tr>
