Batch Training and web monitoring

--- a/Monitor/templates/Batch.html
+++ b/Monitor/templates/Batch.html
@@ -29,7 +29,7 @@
         <td>{{data[net]['host']}}</td>
        <td>
            <form action="/BConfig" method="post">
-            <button type="submit" name="config"  value={{net}} />
+               <button type="submit" name="config"  value={{net}}> Config</button>
             </form>
 
         </td>
