--- a/Monitor/templates/Monitor.html
+++ b/Monitor/templates/Monitor.html
@@ -39,12 +39,12 @@
         <td>{{data[net]['val_acc']}}</td>
         <td>
             <form action="/Graph" method="post">
-            <button type="submit" name="graph"  value={{net}} />
+            <button type="submit" name="graph"  value={{net}}> Graph </button>
             </form>
         </td>
        <td>
            <form action="/Model" method="post">
-            <button type="submit" name="model"  value={{net}} />
+               <button type="submit" name="model"  value={{net}}> Model</button>
             </form>
 
         </td>
@@ -70,12 +70,12 @@
         <td>{{old[net]['val_acc']}}</td>
         <td>
              <form action="/Graph" method="post">
-            <button type="submit" name="graph"  value={{net}} />
+            <button type="submit" name="graph"  value={{net}}> Graph</button>
             </form>
         </td>
        <td>
            <form action="/Model" method="post">
-            <button type="submit" name="model"  value={{net}} />
+               <button type="submit" name="model"  value={{net}}> Model</button>
             </form>
 
         </td>
