Training with data generator

--- a/Monitor/templates/Monitor.html
+++ b/Monitor/templates/Monitor.html
@@ -21,7 +21,8 @@
     <tr>
         <th>NET</th>
         <th>host</th>
-        <th>Time</th>
+        <th>Init Time</th>
+        <th>Upd Time</th>
         <th>Epoch</th>
         <th>Acc</th>
         <th>Val Acc</th>
@@ -32,6 +33,7 @@
     <tr>
         <td> {{net}}</td>
         <td>{{data[net]['host']}}</td>
+        <td>{{data[net]['init']}}</td>
         <td>{{data[net]['upd']}}</td>
 
         <td>{{data[net]['epoch']}}</td>
