--- a/Monitor/templates/Logs.html
+++ b/Monitor/templates/Logs.html
@@ -21,9 +21,10 @@
     <tr>
         <th>NET</th>
         <th>Init Time</th>
+        <th>End Time</th>
+
         <th>Acc</th>
         <th>Val Acc</th>
-        <th>Done</th>
         <th>Graph</th>
         <th>Model</th>
         <th>Report</th>
@@ -33,9 +34,9 @@
     <tr>
         <td> {{net}}</td>
         <td>{{data[net]['init']}}</td>
+        <td>{{data[net]['end']}}</td>
         <td>{{data[net]['acc']}}</td>
         <td>{{data[net]['val_acc']}}</td>
-        <td>{{data[net]['done']}}</td>
         <td>
             <form action="/Graph" method="post">
             <button type="submit" name="graph"  value={{net}}> Graph </button>
