--- a/Traffic/Monitor/templates/Monitor.html
+++ b/Traffic/Monitor/templates/Monitor.html
@@ -68,7 +68,7 @@
         </td>
       <td>
            <form action="/Stop" method="post">
-               <button type="submit" name="model"  value={{data[net]['id']}}> Stop!</button>
+               <button type="submit" name="stop"  value={{data[net]['id']}}> Stop!</button>
             </form>
 
         </td>
