--- a/Traffic/Monitor/templates/Logs.html
+++ b/Traffic/Monitor/templates/Logs.html
@@ -56,7 +56,7 @@
         </td>
         <td>
            <form action="/Report" method="post">
-               <button type="submit" name="model"  value={{net}}> Report</button>
+               <button type="submit" name="report"  value={{net}}> Report</button>
             </form>
 
         </td>
