--- a/Traffic/Monitor/templates/Graphview.html
+++ b/Traffic/Monitor/templates/Graphview.html
@@ -14,10 +14,22 @@
 
 <br>
 <table>
-    <tr>   <td>Experiment</td><td>{{id}}</td> </tr>
-    <tr>   <td>Epoch</td><td>{{ep}}</td></tr>
-    <tr>   <td>Tr Acc</td><td>{{acc}}</td></tr>
-    <tr>   <td>Val Acc</td><td>{{vacc}}</td></tr>
+    <tr>
+        <td>Experiment</td>
+        <td>{{id}}</td>
+    </tr>
+    <tr>
+        <td>Epoch</td>
+        <td>{{ep}}</td>
+    </tr>
+    <tr>
+        <td>Tr Acc</td>
+        <td>{{acc}}</td>
+    </tr>
+    <tr>
+        <td>Val Acc</td>
+        <td>{{vacc}}</td>
+    </tr>
 </table>
 
 <br>
