Graph view CSS style

--- a/Traffic/Monitor/templates/Graphview.html
+++ b/Traffic/Monitor/templates/Graphview.html
@@ -4,6 +4,14 @@
     <title>Keras Training Graph</title>
 
     <style type="text/css">
+        container {
+        margin: 0 auto;
+        width: 740px;
+        border: 1px solid #ddd;
+        padding: 0 5px;
+        text-align: left; /* Cancel IE Fix */
+        }
+
         table, th, td {
             border: 1px solid black;
         }
